@@ -2,14 +2,12 @@ package com.fesi.mukitlist.api.service.gathering.response;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import com.fesi.mukitlist.domain.auth.User;
 import com.fesi.mukitlist.domain.gathering.Gathering;
 import com.fesi.mukitlist.domain.gathering.GatheringType;
 import com.fesi.mukitlist.domain.gathering.Keyword;
 
-public record GatheringResponse(
+public record GatheringCreateResponse(
 	Long id,
 	GatheringType type,
 	String name,
@@ -18,17 +16,14 @@ public record GatheringResponse(
 	String location,
 	String address1,
 	String address2,
-	String description,
-	List<String> keyword,
+	List<String> keywords,
 	int participantCount,
 	int capacity,
 	String image,
-	String createdBy,
-	LocalDateTime canceledAt,
-	Boolean host
+	String createdBy
 ) {
-	public static GatheringResponse forDetail(Gathering gathering, User user, List<Keyword> keywords) {
-		return new GatheringResponse(
+	public static GatheringCreateResponse of(Gathering gathering, List<Keyword> keywords) {
+		return new GatheringCreateResponse(
 			gathering.getId(),
 			gathering.getType(),
 			gathering.getName(),
@@ -37,14 +32,11 @@ public record GatheringResponse(
 			gathering.getLocation(),
 			gathering.getAddress1(),
 			gathering.getAddress2(),
-			gathering.getDescription(),
-			keywords.stream().map(Keyword::toString).collect(Collectors.toList()),
+			keywords.stream().map(Keyword::toString).toList(),
 			gathering.getParticipantCount(),
 			gathering.getCapacity(),
-			gathering.getUser().getImage(),
-			gathering.getUser().getName(),
-			gathering.getCanceledAt(),
-			gathering.isHostUser(user)
+			gathering.getImage(),
+			gathering.getCreatedBy()
 		);
 	}
 }
